# grocery_cv

./: .env.example  pyproject.toml  requirements.txt
app/: main.py
app/data/: RandomBlur.py  data_preparation.py
app/model/: classes.json  model.py  predict.py  resnet_model.py  validation_and_test.py
streamlit/: streamlit.py
