[project]
name = "grocery-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "environs>=15.0.1",
    "fastapi[standard]>=0.138.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "uvicorn>=0.49.0",
]
